css/Stylesheet.css
* { margin:0; padding: 0; box-sizing: border-box;  }
#page-container {
  position: relative;
  height: 100vh;
  width: 100%;
  max-width:100%;
}

#header{
	position: fixed;
	top: 0;
	height: 60px;
	width: 100%;
	background-color: #333333;
	color: #ffffff;
	z-index: 99;
}

#main {
	background-color: #fafafa;
	padding-left: 10px;
	padding-right: 10px;
	position: relative;
	padding-top: 60px;
	width: 100%;
	margin: auto;
	min-height: calc(100% - 40px)
}

#footer {
  position: relative;
  bottom: 0;
  width: 100%;
  height: 40px;            /* Footer height */
  background-color: #333333;
  color: #fafafa;
  text-align: right;
  font-size: 12px;
}

@media screen and (max-width: 1000px) {
	#video-container {
		text-align: center;
		width: 80%;
		height: 80%;
		margin: 0 auto;
		margin-top: 10px;
		margin-bottom: 10px;
	}
}
@media screen and (min-width: 1000px) {
	#video-container {
		text-align: center;
		width: 800px;
		height: 450px;
		margin: 0 auto;
		margin-top: 10px;
		margin-bottom: 10px;
	}
}

#Korean_English {
	text-align: right;
}

#Korean_English a {
	color: #000000;
}

#Korean_English a:visited {
	color: #000000;
}

ul, li { list-style: none;}
a { text-decoration: none; }

nav { width: 60vw; position: absolute; top: 0; right: 0; }
nav > ul { overflow: hidden; }
nav > ul > li { float: left; width: 33.3%; text-align: center; }
nav > ul > li > a { display: inline-block; width: 20vw; height: 60px; color: #fafafa; font-size: 15px; font-weight: bold; vertical-align: middle}
nav > ul > li:hover > a { color: #ffffff;  background: #2d2d2d; }
nav > ul > li:hover > ul { display: block; }

.submenu { display: none; position: absolute; z-index: 99; text-align: center; background: #2d2d2d; }
.submenu > li > a { display: block; padding: 14px 0px; color: #7d7d7d; width: 20vw ; font-size: 14px;  }
.submenu > li > a:hover { background: #ccc; }
@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
* {font-family: 'Spoqa Han Sans Neo', 'sans-serif';}

#main a:hover {
	color: #4f4f4f;
	background-color: transparent;
	text-decoration: underline;
}
#main a:visited {
	color: #4f4f4f;
	background-color: transparent;
	text-decoration: none;
}
#footer a {
	color: #fafafa;
	background-color: transparent;
	text-decoration: none;
}
#footer a:hover {
	color: #7f7f7f;
        background-color: transparent;
        text-decoration: underline;
}
#footer a:visited {
	color: #7f7f7f;
	background-color: transparent;
	text-decoration: none;
}

h1
{
        text-align:center;
        font-size:35px;
        margin-top:10px;
        margin-bottom:10px;
        color:#000000;
}
h1 p
{
 text-align:center;
 margin:0px;
 font-size:18px;
 text-decoration:underline;
 color:white;
}
hr {
        background-color: #d0d0d0;
        border: 0;
        height: 1px;
	width: 97%;
	margin: 0 auto;
}
@media screen and (max-width: 600px){
	#table {
		min-width: 91vw;
		text-align: center;
	}

	table {
        	border-collapse: collapse;
        	border: 1px solid;
        	border-color: #9d9d9d;
        	font-size: 2vw;
        	text-align: center;
        	margin: 0 auto;
	}
	th {
        	background-color: #6d6d6d;
        	color: #fafafa;
        	border: 1px solid;
        	border-color: #9d9d9d;
        	height: 25px;
	}
	td {
        	border : 1px solid;
        	border-color: #9d9d9d;
        	padding: 1vw;
        	min-width: 13vw;
	}
}
@media screen and (min-width: 600px){
	#table{
		min-width: 500px;
		text-align: center;
	}
	table {
		border-collapse: collapse;
		border: 1px solid;
		border-color: #9d9d9d;
		font-size: 13px;
		text-align: center;
		margin: 0 auto;
	}
	th {
		background-color: #6d6d6d;
		color: #fafafa;
		border: 1px solid;
		border-color: #9d9d9d;
		height:30px;
	}
	td {
		border: 1px solid;
		border-color: #9d9d9d;
		padding: 5px;
		min-width:70px;
	}
}

